--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,10 @@
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
+    <script
+      type="text/javascript"
+      src="/scripts/composer-char-counter.js"
+    ></script>
 
     <!-- External CSS -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
