--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
     <link rel="stylesheet" href="/styles/header.css" type="text/css" />
     <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
-    <link ref="stylesheet" href="/styles/all-tweets.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/all-tweets.css" type="text/css" />
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -61,44 +61,62 @@
     </header>
 
     <!-- Page-specific (main) content here -->
-    <main class="container">
-      <section class="new-tweet">
-        <h2>Compose Tweet</h2>
-        <form>
-          <label for="tweet-text">What are you humming about?</label>
-          <textarea name="text" id="tweet-text"></textarea>
+    <main class="container"></main>
+    <section class="new-tweet">
+      <h2>Compose Tweet</h2>
+      <form>
+        <label for="tweet-text">What are you humming about?</label>
+        <textarea name="text" id="tweet-text"></textarea>
+        <div>
+          <button type="submit">Tweet</button>
+          <output name="counter" class="counter" for="tweet-text">140</output>
+        </div>
+      </form>
+    </section>
+
+    <section class="all-tweets">
+      <article class="tweet">
+        <div class="tweet-header">
+          <div class="user-profile">
+            <img class="user-avatar" src="/images/nlhLi3I.png" />
+            <h4 class="user-name">Descartes</h4>
+          </div>
           <div>
-            <button type="submit">Tweet</button>
-            <output name="counter" class="counter" for="tweet-text">140</output>
+            <h4 class="user-handle">@rd</h4>
           </div>
-        </form>
-      </section>
-    </main>
-    <main class="tweet-container">
-      <section class="all-tweets">
-        <article class="tweet">
-          <div class="tweet-header">
-            <div class="user-profile">
-              <img class="user-avatar" src="/images/73hZDYK.png" />
-              <h4 class="user-name">Newton</h4>
-            </div>
-            <div>
-              <h4 class="user-handle">@SirIsaac</h4>
-            </div>
+        </div>
+        <div class="tweet-text">Je pense , donc je suis</div>
+        <footer class="tweet-footer">
+          <span class="tweet-date">10 days ago</span>
+          <div class="tweet-response">
+            <i class="fas fa-flag"></i>
+            <i class="fas fa-retweet"></i>
+            <i class="fas fa-heart"></i>
           </div>
-          <div class="tweet-text">
-            If I have seen further it is by standing on the shoulders of giants
+        </footer>
+      </article>
+      <article class="tweet">
+        <div class="tweet-header">
+          <div class="user-profile">
+            <img class="user-avatar" src="/images/73hZDYK.png" />
+            <h4 class="user-name">Newton</h4>
           </div>
-          <footer class="tweet-footer">
-            <span class="tweet-date">10 days ago</span>
-            <div class="tweet-response">
-              <i class="fas fa-flag"></i>
-              <i class="fas fa-retweet"></i>
-              <i class="fas fa-heart"></i>
-            </div>
-          </footer>
-        </article>
-      </section>
-    </main>
+          <div>
+            <h4 class="user-handle">@SirIsaac</h4>
+          </div>
+        </div>
+        <div class="tweet-text">
+          If I have seen further it is by standing on the shoulders of giants
+        </div>
+        <footer class="tweet-footer">
+          <span class="tweet-date">10 days ago</span>
+          <div class="tweet-response">
+            <i class="fas fa-flag"></i>
+            <i class="fas fa-retweet"></i>
+            <i class="fas fa-heart"></i>
+          </div>
+        </footer>
+      </article>
+    </section>
   </body>
 </html>
