--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,12 @@
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/timeago.js/4.0.2/timeago.min.js"
+      integrity="sha512-SVDh1zH5N9ChofSlNAK43lcNS7lWze6DTVx1JCXH1Tmno+0/1jMpdbR8YDgDUfcUrPp1xyE53G42GFrcM0CMVg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
@@ -74,49 +80,6 @@
       </form>
     </section>
 
-    <section class="all-tweets">
-      <article class="tweet">
-        <div class="tweet-header">
-          <div class="user-profile">
-            <img class="user-avatar" src="/images/nlhLi3I.png" />
-            <h4 class="user-name">Descartes</h4>
-          </div>
-          <div>
-            <h4 class="user-handle">@rd</h4>
-          </div>
-        </div>
-        <div class="tweet-text">Je pense , donc je suis</div>
-        <footer class="tweet-footer">
-          <span class="tweet-date">10 days ago</span>
-          <div class="tweet-response">
-            <i class="fas fa-flag"></i>
-            <i class="fas fa-retweet"></i>
-            <i class="fas fa-heart"></i>
-          </div>
-        </footer>
-      </article>
-      <article class="tweet">
-        <div class="tweet-header">
-          <div class="user-profile">
-            <img class="user-avatar" src="/images/73hZDYK.png" />
-            <h4 class="user-name">Newton</h4>
-          </div>
-          <div>
-            <h4 class="user-handle">@SirIsaac</h4>
-          </div>
-        </div>
-        <div class="tweet-text">
-          If I have seen further it is by standing on the shoulders of giants
-        </div>
-        <footer class="tweet-footer">
-          <span class="tweet-date">10 days ago</span>
-          <div class="tweet-response">
-            <i class="fas fa-flag"></i>
-            <i class="fas fa-retweet"></i>
-            <i class="fas fa-heart"></i>
-          </div>
-        </footer>
-      </article>
-    </section>
+    <section id="tweets-container"></section>
   </body>
 </html>
