Form submission using JQuery

--- a/public/index.html
+++ b/public/index.html
@@ -70,11 +70,14 @@
     <main class="container"></main>
     <section class="new-tweet">
       <h2>Compose Tweet</h2>
-      <form>
-        <label for="tweet-text">What are you humming about?</label>
-        <textarea name="text" id="tweet-text"></textarea>
+      <form action="/tweets" method="POST" id="new-tweet-form">
+        <textarea
+          name="text"
+          id="tweet-text"
+          placeholder="What are you humming about?"
+        ></textarea>
         <div>
-          <button type="submit">Tweet</button>
+          <button id="submit" type="submit">Tweet</button>
           <output name="counter" class="counter" for="tweet-text">140</output>
         </div>
       </form>
