--- a/public/index.html
+++ b/public/index.html
@@ -71,11 +71,8 @@
     <section class="new-tweet">
       <h2>Compose Tweet</h2>
       <form action="/tweets" method="POST" id="new-tweet-form">
-        <textarea
-          name="text"
-          id="tweet-text"
-          placeholder="What are you humming about?"
-        ></textarea>
+        <label for="textarea">What are you humming about?</label>
+        <textarea name="text" id="tweet-text"></textarea>
         <div>
           <button id="submit" type="submit">Tweet</button>
           <output name="counter" class="counter" for="tweet-text">140</output>
