Modify the responsive design

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,11 @@
     <!-- Meta Information -->
     <title>Tweeter - Home Page</title>
 
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0"
+    />
+
     <!-- External CSS -->
     <link
       rel="stylesheet"
@@ -50,14 +55,14 @@
   <body>
     <!-- Top nav bar (fixed) -->
     <nav>
-      <span class="a">tweeter</span>
-      <span class="b">
+      <span class="logo">tweeter</span>
+      <span class="write-tweet">
         Write a new tweet
         <i class="fas fa-angle-double-down" style="color: red"></i>
       </span>
     </nav>
 
-    <header>
+    <header class="header">
       <div>
         <img src="/images/profile-hex.png" />
       </div>
@@ -67,33 +72,34 @@
     </header>
 
     <!-- Page-specific (main) content here -->
-    <main class="container"></main>
-    <!-- Submitting a new tweet -->
-    <section class="new-tweet">
-      <h2>Compose Tweet</h2>
+    <main class="container">
+      <!-- Submitting a new tweet -->
+      <section class="new-tweet">
+        <h2>Compose Tweet</h2>
 
-      <span class="empty-tweet" id="empty-tweet">
-        <i class="fas fa-exclamation-triangle" style="color: red"></i>
-        Please submit a tweet!
-        <i class="fas fa-exclamation-triangle" style="color: red"></i>
-      </span>
-      <span class="long-tweet" id="long-tweet">
-        <i class="fas fa-exclamation-triangle" style="color: red"></i>
-        You have exceeded the 140 character limit. Please submit a shorter
-        tweet!
-        <i class="fas fa-exclamation-triangle" style="color: red"></i>
-      </span>
+        <span class="empty-tweet" id="empty-tweet">
+          <i class="fas fa-exclamation-triangle" style="color: red"></i>
+          Please submit a tweet!
+          <i class="fas fa-exclamation-triangle" style="color: red"></i>
+        </span>
+        <span class="long-tweet" id="long-tweet">
+          <i class="fas fa-exclamation-triangle" style="color: red"></i>
+          You have exceeded the 140 character limit. Please submit a shorter
+          tweet!
+          <i class="fas fa-exclamation-triangle" style="color: red"></i>
+        </span>
 
-      <form action="/tweets" method="POST" id="new-tweet-form">
-        <label for="textarea">What are you humming about?</label>
-        <textarea name="text" id="tweet-text"></textarea>
-        <div>
-          <button id="submit" type="submit">Tweet</button>
-          <output name="counter" class="counter" for="tweet-text">140</output>
-        </div>
-      </form>
-    </section>
-    <!-- All tweets -->
-    <section id="tweets-container"></section>
+        <form action="/tweets" method="POST" id="new-tweet-form">
+          <label for="textarea">What are you humming about?</label>
+          <textarea name="text" id="tweet-text"></textarea>
+          <div>
+            <button id="submit" type="submit">Tweet</button>
+            <output name="counter" class="counter" for="tweet-text">140</output>
+          </div>
+        </form>
+      </section>
+      <!-- All tweets -->
+      <section class="tweets-container" id="tweets-container"></section>
+    </main>
   </body>
 </html>
