--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@
         <img src="/images/profile-hex.png" />
       </div>
       <div>
-        <h2>Jeewon Lee</h2>
+        <h2 class="name">Jeewon Lee</h2>
       </div>
     </header>
 
